[gd_scene load_steps=8 format=3 uid="uid://4xds3dgx3hyf"]

[ext_resource type="PackedScene" uid="uid://b4ivgos0w0uin" path="res://scenes/Space Shooter/player.tscn" id="1_bv6cn"]
[ext_resource type="Script" path="res://scripts/Space Shooter/game.gd" id="1_mssxk"]
[ext_resource type="PackedScene" uid="uid://3qneuka50jp8" path="res://scenes/Space Shooter/ui.tscn" id="4_wrwlb"]
[ext_resource type="Texture2D" uid="uid://dlk04hupfuc7i" path="res://assets/Space Shooter/backgrounds/black.png" id="5_1k3ov"]
[ext_resource type="AudioStream" uid="uid://dryloe7ylvnfc" path="res://assets/Space Shooter/audio/explode.wav" id="6_m6w1e"]
[ext_resource type="AudioStream" uid="uid://bdy4k6wbv30nw" path="res://assets/Space Shooter/audio/hit.wav" id="7_b74to"]
[ext_resource type="PackedScene" uid="uid://b3mf2ysdqh8nu" path="res://scenes/Space Shooter/enemy.tscn" id="8_n843h"]

[node name="SpaceShooter" type="Node2D"]
script = ExtResource("1_mssxk")

[node name="Player" parent="." instance=ExtResource("1_bv6cn")]
position = Vector2(673, 661)

[node name="HUD" type="CanvasLayer" parent="."]

[node name="UI" parent="HUD" instance=ExtResource("4_wrwlb")]
metadata/_edit_lock_ = true

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2(0, 720)

[node name="TextureRect" type="TextureRect" parent="ParallaxBackground/ParallaxLayer"]
offset_top = -720.0
offset_right = 1280.0
texture = ExtResource("5_1k3ov")
expand_mode = 1
stretch_mode = 1

[node name="ExplodeSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_m6w1e")

[node name="HitSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_b74to")

[node name="Enemy" parent="." instance=ExtResource("8_n843h")]
position = Vector2(95, 169)

[node name="Enemy2" parent="." instance=ExtResource("8_n843h")]
position = Vector2(243, 262)

[node name="Enemy3" parent="." instance=ExtResource("8_n843h")]
z_index = -1
position = Vector2(451, 181)

[node name="Enemy4" parent="." instance=ExtResource("8_n843h")]
position = Vector2(876, 175)

[node name="Enemy5" parent="." instance=ExtResource("8_n843h")]
position = Vector2(1029, 237)

[node name="Enemy6" parent="." instance=ExtResource("8_n843h")]
position = Vector2(1155, 175)

[connection signal="took_damage" from="Player" to="." method="_on_player_took_damage"]
